--- a/src/app/article/article.page.scss
+++ b/src/app/article/article.page.scss
@@ -1,7 +1,7 @@
 ion-header {
   ion-toolbar {
     width: 100vw;
-    height: 10vh;
+    height: auto;
     padding: .5rem;
     padding-left: 12px;
     img {
@@ -9,24 +9,24 @@ ion-header {
       padding-left: -30px;
     }
     .title-page {
-      // width: fit-content;
       padding: 0;
-      
     }
   }
 }
 
-
-
-.articles-background-color {
-  --ion-background-color: #e82828!important;
+.elips-5{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  line-clamp: 5;
 }
 
-.articles-background-color-card {
-    --ion-background-color: #ffffff!important;
-}
-
-.articles-background-color-text {
-  --ion-text-color: #000000!important;
+.ion-cards-center {
+  top: 0%;
+  width: 100%;
+  text-align: center;
+  padding: 0;
 }
 
